--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "lightbox2": "^2.8.2",
     "mongoose": "^4.6.0",
     "nodemon": "^1.10.2"
   },
