--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.2",
     "es6": "0.0.7",
@@ -13,7 +14,8 @@
     "express-session": "^1.14.1",
     "lightbox2": "^2.8.2",
     "mongoose": "^4.6.0",
-    "nodemon": "^1.10.2"
+    "nodemon": "^1.10.2",
+    "passport": "^0.3.2"
   },
   "devDependencies": {},
   "scripts": {
